linuxconf/files/iptables.rules
# Generated by iptables-save v1.6.1 on Sun Jul 16 14:57:28 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [40:5641]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# pc + hms: minecraft, secondary SSH
-A INPUT -p tcp -m tcp --dport 25565:25567 -j ACCEPT

# Generic dynamic ports (use without doc)
-A INPUT -p tcp -m tcp --dport 30400:30499 -j ACCEPT

# mpc + hms: socks proxy
-A INPUT -p tcp -m tcp --dport 1080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10808 -j ACCEPT

# amule, pc.re+mpc.re qbittorrents
-A INPUT -p tcp -m tcp --dport 4662:4673 -j ACCEPT
-A INPUT -p udp -m udp --dport 4673 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5593 -j ACCEPT
-A INPUT -p udp -m udp --dport 5593 -j ACCEPT

# pc.re: temporary http https
-A INPUT -p tcp -m tcp -s 10.0.0.0/8 --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp -s 10.0.0.0/8 --dport 443 -j ACCEPT

# pc.re: temporary VNC
-A INPUT -p tcp -m tcp -s 10.0.0.0/8 --dport 5900 -j ACCEPT

# mpc.re: temporary SSH
-A INPUT -p tcp -m tcp -s 10.0.0.0/8 --dport 22 -j ACCEPT

-A INPUT -p icmp -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sun Jul 16 14:57:28 2017
